syntax = "proto3";
package tendermint.blocksync;

option go_package = "github.com/cometbft/cometbft/proto/tendermint/blocksync";

// BlockRequest requests a block for a specific height
message BlockRequest {
  int64 height = 1;
}